k3s/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: iphr
  namespace: iphr
spec:
  type: NodePort
  selector:
    app: iphr
  ports:
    - port: 80
      targetPort: 8080
      nodePort: 30082
