k3s/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: iphr
  namespace: iphr
  annotations:
    traefik.ingress.kubernetes.io/router.entrypoints: websecure
    traefik.ingress.kubernetes.io/router.tls.certresolver: letsencrypt
spec:
  rules:
    - host: iphr.gheop.com
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: iphr
                port:
                  number: 80
  tls:
    - hosts:
        - iphr.gheop.com
